<resources>
    <string name="app_name">卓小饭</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="home_page">主页</string>
    <string name="notice">通知</string>
    <string name="message">私信</string>
    <string name="profile">个人资料</string>
    <string name="photo_album">相册</string>
    <string name="favorite">收藏</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">邮箱地址无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error">Oops! something wrong</string>
    <string name="hint_white_something">正在发生什么事情？</string>
    <string name="tab_home">主页</string>
    <string name="tab_notice">通知</string>
    <string name="tab_message">私信</string>
    <string name="tab_status">消息</string>
    <string name="public_timeline">随便看看</string>
    <string name="scheme_profile">droidfan</string>
    <string name="error_protected">只向关注TA的人公开消息</string>
    <string name="error_no_status">没有消息</string>
    <string name="hint_input_message">写私信</string>
    <string name="send">发送</string>
    <string name="text_should_not_empty">内容不能为空</string>
    <string name="text_too_more">内容不能超过140个字</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="delete_dialog_message">确定删除该消息？</string>
    <string name="no_new_status">没有新消息</string>
    <string name="network_is_disconnected">没有网络！</string>
    <string name="view_photo">查看图片</string>
    <string name="follow">正在关注</string>
    <string name="follower">关注者</string>
    <string name="empty_text">٩(๑´0`๑)۶</string>
    <string name="setting">设置</string>
    <string name="push">推送</string>
    <string name="notification">提醒</string>
    <string name="get_more">正在努力加载~(～o￣▽￣)～o</string>
    <string name="only_friends_can_send_message">客户端无法向TA发送私信</string>
    <string name="update_new_status">发新饭</string>
    <string name="do_not_click_me">你戳我也没有用(⊙ˍ⊙)</string>
    <string name="save_draft_message">保存到草稿？</string>
    <string name="do_not_save">不必</string>
    <string name="draft_box">草稿箱</string>


    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_user_list">ScrollingActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">提醒频率</string>
    <string-array name="pref_sync_frequency_titles">
        <item>每 5 分钟</item>
        <item>每 15 分钟</item>
        <item>每 30 分钟</item>
        <item>每 1 小时</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="feedback">反馈</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">新消息时铃声提醒</string>

    <string name="pref_title_ringtone">铃声</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">震动</string>
    <string name="about">关于</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
